26.1.2対応